style: readability issue solved

--- a/Frontend/src/css/cssComponents/vars/colours.css
+++ b/Frontend/src/css/cssComponents/vars/colours.css
@@ -6,9 +6,10 @@
   --bg-shift-alt: #fbb042;
 
   /* text colours */
-  --txt-shift-primary: #fbf8cd;
+  --txt-shift-primary: black;
   --txt-shift-secondary: black;
   --txt-warning: darkred;
+  --txt-hero: #fbf8cd;
 
   /* highlight colours */
   --hl-primary: #fbb042;
